--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-hash-link": "^1.2.0",
     "react-script-tag": "^1.1.2",
+    "react-stepzilla": "^4.7.3",
     "request": "^2.81.0",
     "showdown": "^1.8.6",
     "string-to-json": "^0.1.0",
