--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "VvKN",
+  "name": "Billing",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -9,24 +9,19 @@
     "babelify": "^7.3.0",
     "backbone": "^1.3.3",
     "bootstrap": "^3.3.7",
-    "browser-polyfill": "^3.20.2",
     "browserify": "^14.4.0",
-    "buffer": "^5.0.7",
+    "buffer": "^5.2.1",
     "classnames": "^2.2.5",
     "express": "^4.15.3",
     "font-awesome": "^4.7.0",
     "fontawesome": "^4.7.2",
-    "fs": "0.0.1-security",
     "glyphicons": "^0.2.0",
     "jquery": "^3.3.1",
-    "jquery-migrate": "^3.0.1",
     "markdown": "^0.5.0",
     "network": "^0.3.2",
     "query-string": "^6.2.0",
     "react": "^15.6.2",
     "react-bootstrap": "^0.31.5",
-    "react-bootstrap-multiselect": "^2.4.1",
-    "react-bootstrap-table": "^3.4.3",
     "react-dom": "^15.6.2",
     "react-html-parser": "^2.0.2",
     "react-load-script": "0.0.6",
