--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.3.1",
     "markdown": "^0.5.0",
     "network": "^0.3.2",
+    "popper.js": "^1.14.5",
     "query-string": "^6.2.0",
     "react": "^15.6.2",
     "react-bootstrap": "^0.31.5",
