--- a/package.json
+++ b/package.json
@@ -4,22 +4,15 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "babel-preset-react": "^6.24.1",
-    "babelify": "^7.3.0",
-    "backbone": "^1.3.3",
     "bootstrap": "^4.1.2",
-    "browserify": "^14.4.0",
     "buffer": "^5.2.1",
     "classnames": "^2.2.5",
     "express": "^4.15.3",
-    "font-awesome": "^4.7.0",
-    "fontawesome": "^4.7.2",
     "glyphicons": "^0.2.0",
     "jquery": "^3.3.1",
     "markdown": "^0.5.0",
-    "network": "^0.3.2",
-    "popper.js": "^1.14.5",
-    "query-string": "^6.2.0",
+    "popper.js": "^1.15.0",
+    "query-string": "^6.4.2",
     "react": "^15.6.2",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^15.6.2",
@@ -31,17 +24,20 @@
     "react-script-tag": "^1.1.2",
     "react-stepzilla": "^4.7.3",
     "request": "^2.81.0",
-    "showdown": "^1.8.6",
-    "string-to-json": "^0.1.0",
-    "underscore": "^1.9.1",
-    "xml2js": "^0.4.17"
+    "showdown": "^1.9.0"
   },
   "devDependencies": {
-    "babelify": "^7.3.0"
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.5.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node build.js",
+    "buildCustomComponents": "mustache customComponents.json ServicesPageBlock1_template.js > ServicesPageBlock1.js",
+    "start": "node server.js"
   },
-  "author": "",
+  "author": "Vapour Apps",
   "license": "ISC"
 }
