--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "bootstrap": "^4.1.2",
+    "blob-to-buffer": "^1.2.8",
+    "bootstrap": "^4.3.1",
     "buffer": "^5.2.1",
     "classnames": "^2.2.5",
     "express": "^4.15.3",
     "jquery": "^3.3.1",
     "markdown": "^0.5.0",
+    "minio": "^7.0.8",
     "popper.js": "^1.15.0",
     "query-string": "^6.4.2",
     "react": "^15.6.2",
@@ -20,6 +22,7 @@
     "react-router-dom": "^4.3.1",
     "react-script-tag": "^1.1.2",
     "react-stepzilla": "^4.7.3",
+    "reactstrap": "^8.0.0",
     "request": "^2.81.0",
     "showdown": "^1.9.0"
   },
