Make file_uploading async function works synchronous (fixed bug)

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "buffer": "^5.2.1",
     "classnames": "^2.2.5",
     "express": "^4.15.3",
+    "i18next": "^15.1.2",
     "jquery": "^3.3.1",
     "markdown": "^0.5.0",
     "minio": "^7.0.8",
