--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "react-dropzone": "^10.1.5",
     "react-html-parser": "^2.0.2",
     "react-is": "^16.8.6",
+    "react-redux": "^7.0.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-script-tag": "^1.1.2",
     "react-stepzilla": "^4.7.3",
     "reactstrap": "^8.0.0",
+    "redux": "^4.0.1",
     "request": "^2.81.0",
     "showdown": "^1.9.0",
     "superagent": "^5.0.5"
