Add utilities module with functions (code refactoring) && Add subscription_flow key in backend.json.sample

--- a/backend.json.sample
+++ b/backend.json.sample
@@ -1,5 +1,6 @@
 {
  "url": "https://localhost",
+ "subscription_flow": "standard",
  "company_name": "Company_name",
  "api_key": "your_api_key_from_https://free.currencyconverterapi.com/"
 }
