--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^4.3.1",
     "react-script-tag": "^1.1.2",
     "react-stepzilla": "^4.7.3",
+    "reactable": "github:vapourapps/reactable",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "request": "^2.81.0",
