--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-router-dom": "^4.3.1",
     "react-script-tag": "^1.1.2",
     "react-stepzilla": "^4.7.3",
-    "reactable": "github:vapourapps/reactable",
+    "react-table": "^6.10.0",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "request": "^2.81.0",
