--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.3.1",
     "buffer": "^5.2.1",
     "classnames": "^2.2.5",
+    "compression": "^1.7.4",
     "express": "^4.15.3",
     "i18next": "^15.1.2",
     "jquery": "^3.3.1",
@@ -38,7 +39,8 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babelify": "^7.3.0",
-    "browserify": "^14.5.0"
+    "browserify": "^14.5.0",
+    "webpack-bundle-analyzer": "^3.4.1"
   },
   "scripts": {
     "build": "node build.js",
